# set-partitions

./: Cargo.toml  README.md
src/: lib.rs
